compiler/testData/diagnostics/tests/inline/localFun.kt
fun main(args: Array<String>) {
    <!NOT_YET_SUPPORTED_IN_INLINE!>inline fun a(){
    }<!>
}